[package]
name = "spark-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
rand = "0.8.5"


[features]
default = ["performant_speech", "no_delay_generation_exit"]
talking_electricity = []
performant_speech = []

no_delay_generation_exit = []
